*
* 0.2.20
*

- Implemented advanced event processing using situations
- Added checking of NetXMS server own network connectivity via beacon hosts
- Implemented "proxy node" functionality for DCIs
- Added possibility to specify multiple recipients in e-mail or SMS action
- Implemented System.CPU.Usage for individual processors on Linux
- PING subagent: added parameter ICMP.PacketLoss(*)
- Command line options for the server changed to use common style
- Added UNICODE support in client part on Linux/UNIX
- Implemented macros in template DCIs (expanded when template applies to node)
- Added event storm detection
- Added possibility to specify multiple SNMP community strings for discovery
  and configuration polls
- NetXMS server now can understand interface aliases (description in Cisco terms)
- Added optional synchronization of node names with DNS
- New command line tool for managing alarms - nxalarm
- Implemented "stop processing" option for event processing policy rule
- Implemented "move" operation for templates (move between template groups)
- New internal parameter: ConditionStatus(*)
- Fixed issues: #188, #189, #190, #191, #195, #199, #203


*
* 0.2.19
*

- Added SMS driver and subagent to send SMS via remote NetXMS agent
- Added parameters Net.RemoteShareStatus and Net.RemoteShareStatusText
  to WINNT subagent
- Added possibility to disable status, configuration, or routing table
  polls for specific host
- Added possibility to define number of consecutive status polls with same
  result needed to change status of interface or network service object
- Fixed issues: #77, #134, #151, #179, #182, #183, #184, #185, #186


*
* 0.2.18
*

- Windows console: added "subordinates" view in object browser
- WinPerf subagent:
	- Improved non-English Windows support
	- Added new parameter: System.IO.DiskTime
- New MIB added: FIBRE-CHANNEL-FE-MIB
- Fixed issues: #23, #129, #163, #164, #165, #167, #168, #170, #172, #173,
                #174, #175, #176, #177, #178


*