@@ -3,8 +3,8 @@
 
 [Setup]
 AppName=NetXMS Agent
-AppVerName=NetXMS Agent 0.2.20-rc2
-AppVersion=0.2.20-rc2
+AppVerName=NetXMS Agent 0.2.20-rc3
+AppVersion=0.2.20-rc3
 AppPublisher=NetXMS Team
 AppPublisherURL=http://www.netxms.org
 AppSupportURL=http://www.netxms.org
@@ -12,7 +12,7 @@ AppUpdatesURL=http://www.netxms.org
 DefaultDirName=C:\NetXMS
 DefaultGroupName=NetXMS Agent
 AllowNoIcons=yes
-OutputBaseFilename=nxagent-0.2.20-rc2
+OutputBaseFilename=nxagent-0.2.20-rc3
 Compression=lzma
 SolidCompression=yes
 LanguageDetectionMethod=none
